--- a/JiaoBaoYun-hb/html/quan/leave-reply.html
+++ b/JiaoBaoYun-hb/html/quan/leave-reply.html
@@ -27,6 +27,13 @@
 				<p></p>
 				<textarea id='content' class="mui-input-clear question" placeholder="留言" style="height: 200px;"></textarea>
 			</div>
+			 <img src="http://qn-cspb.jiaobaowang.net/jxq/ClassSpace/thumb/magazine-unlock-06-2.3.522-bigpicture_06_30.jpg" style="width:33.33333333%; padding:2px" />
+			 <img src="http://qn-cspb.jiaobaowang.net/jxq/ClassSpace/thumb/Screenshot_2017-02-21-15-43-14.png" style="width:33.33333333%; padding:2px" />
+			 <img src="http://qn-cspb.jiaobaowang.net/jxq/ClassSpace/thumb/Screenshot_2017-02-21-16-53-41.png" style="width:33.33333333%; padding:2px" />
+			 <img src="http://qn-cspb.jiaobaowang.net/jxq/ClassSpace/thumb/Screenshot_2017-02-21-17-11-16.png" style="width:33.33333333%; padding:2px" />
+			 <img src="http://qn-cspb.jiaobaowang.net/jxq/ClassSpace/thumb/Screenshot_2017-02-21-13-57-19.png" style="width:33.33333333%; padding:2px" />
+			 <img src="http://qn-cspb.jiaobaowang.net/jxq/ClassSpace/thumb/magazine-unlock-05-2.3.521-bigpicture_05_21.jpg" style="width:33.33333333%; padding:2px" />
+			 <img src="http://qn-cspb.jiaobaowang.net/jxq/ClassSpace/thumb/magazine-unlock-06-2.3.521-bigpicture_06_20.jpg" style="width:33.33333333%; padding:2px" /><img src="http://qn-cspb.jiaobaowang.net/jxq/ClassSpace/thumb/Screenshot_2017-02-21-11-32-21.png" style="width:33.33333333%; padding:2px" /> at js/quan/class_space.js:196
 		</div>
 	</body>
 	<script>
