--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
@@ -8,6 +8,7 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
+		<link rel="stylesheet" type="text/css" href="../../css/quan/custom-textarea.css"/>
 	</head>
 
 	<body>
@@ -21,6 +22,19 @@
 			<p id="askTitle" style="margin-left: 10px;font-size: 14px;margin-top: 5px;"></p>
 			<div class="input-content">
 				<textarea id="answerContent" placeholder="添加回答"></textarea>
+				<div id="take_pic" class="take_pic">
+					<a class="mui-icon iconfont icon-xiangji1"></a>
+				</div>
+				<div id="take_camero" class="take_camero">
+					<a class="mui-icon iconfont icon-shipin"></a>
+				</div>
+				<div id="get_gallery" class="get_gallery">
+					<a class="mui-icon iconfont icon-tuku"></a>
+				</div>
+			</div>
+			<div class="mui-input-row mui-checkbox mui-left" style="float: right;width: 100px;margin-top: -35px;margin-left: -100px;">
+				<label>匿名</label>
+				<input id="checkbox" name="checkbox" value="" type="checkbox">
 			</div>
 		</div>
 
@@ -39,7 +53,29 @@
 				askTitle.innerHTML = askModel.AskTitle;
 			});
 			mui.plusReady(function() {
-
+				mui('#ExpertList').on('tap', '.checkbox', function() {
+					this.checked = !this.checked;
+					window.event.stopPropagation();
+				})
+			});
+			
+			events.addTap('take_pic', function() {
+				mui.toast('此功能暂未开放');
+				//				camera.getPic(camera.getCamera(), function(path) {
+				//
+				//				});
+			});
+			events.addTap('take_camero', function() {
+				mui.toast('此功能暂未开放');
+				//				camera.getVideo(camera.getCamera(), function(path) {
+				//
+				//				});
+			});
+			events.addTap('get_gallery', function() {
+				mui.toast('此功能暂未开放');
+				//				gallery.getMultiplePic(function(paths) {
+				//
+				//				});
 			});
 
 			//提交按钮
@@ -53,6 +89,11 @@
 					mui.toast('不能超过4000字');
 					return;
 				}
+				var checkboxBtn = document.getElementById("checkbox");
+				if (checkboxBtn.checked) {
+//					personalUTID = '';
+				}
+				
 				//所需参数
 				var comData = {
 					askId: askModel.TabId, //问题ID
