班级群成员重组

--- a/JiaoBaoYun-hb/html/quan/class-group.html
+++ b/JiaoBaoYun-hb/html/quan/class-group.html
@@ -20,7 +20,11 @@
 		</header>
 		<div class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
-				<div style="">
+				<ul id="gride" class="mui-table-view mui-grid-view mui-grid-9">
+				
+				   </ul>
+				
+				<!--<div style="">
 					<div id="segmentedControl" class="mui-segmented-control mui-segmented-control-primary">
 
 						<a class="mui-control-item mui-active" href="#item1">
@@ -37,24 +41,24 @@
 				</div>
 				<div id="item1" class="mui-control-content mui-active">
 					<!--学生群组内容-->
-					<ul id="gride1" class="mui-table-view mui-grid-view mui-grid-9"></ul>
+					<!--<ul id="gride1" class="mui-table-view mui-grid-view mui-grid-9"></ul>
 					<!--退群按钮-->
-					<button id="quit-group1" type="button" class="mui-btn mui-btn-danger group-button display-none">退出</button>
+					<!--<button id="quit-group1" type="button" class="mui-btn mui-btn-danger group-button display-none">退出</button>-->
 
-				</div>
-				<div id="item2" class="mui-control-content">
+				<!--</div>-->
+				<!--<div id="item2" class="mui-control-content">-->
 					<!--老师群组内容-->
-					<ul id="gride2" class="mui-table-view mui-grid-view mui-grid-9"></ul>
+					<!--<ul id="gride2" class="mui-table-view mui-grid-view mui-grid-9"></ul>-->
 					<!--退群按钮-->
-					<button id="quit-group2" type="button" class="mui-btn mui-btn-danger group-button display-none">退出</button>
+					<!--<button id="quit-group2" type="button" class="mui-btn mui-btn-danger group-button display-none">退出</button>-->
 
-				</div>
-				<div id="item3" class="mui-control-content">
+				<!--</div>-->
+				<!--<div id="item3" class="mui-control-content">-->
 					<!--家长群组内容-->
-					<ul id="gride3" class="mui-table-view mui-grid-view mui-grid-9"></ul>
+					<!--<ul id="gride3" class="mui-table-view mui-grid-view mui-grid-9"></ul>-->
 					<!--退群按钮-->
-					<button id="quit-group3" type="button" class="mui-btn mui-btn-danger group-button display-none">退出</button>
-				</div>
+					<!--<button id="quit-group3" type="button" class="mui-btn mui-btn-danger group-button display-none">退出</button>-->
+				<!--</div>-->
 			</div>
 		</div>
 	</body>
@@ -62,6 +66,6 @@
 	<script src="../../js/publicProtocol.js"></script>
 	<script type="text/javascript" src="../../js/utils/events.js"></script>
 	<!--本頁專用JS-->
-	<script type="text/javascript" src="../../js/quan/class-group.js"></script>
+	<script type="text/javascript" src="../../js/quan/class-group1.js"></script>
 
 </html>
