--- a/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
@@ -8,7 +8,33 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
-		<link href="../../css/qiuzhi/qiuzhi-inviteAnswerSub.css" rel="stylesheet" />
+		<link href="../../css/qiuzhi/qiuzhi-inviteAnswer.css" rel="stylesheet" />
+		<style>
+			.mui-table h4,
+			.mui-table h5,
+			.mui-table .mui-h5,
+			.mui-table .mui-h6,
+			.mui-table p {
+				margin-top: 0;
+				padding-left: 10px;
+			}
+			
+			.mui-table h4 {
+				line-height: 21px;
+				font-weight: 500;
+				padding-left: 10px;
+			}
+			
+			.mui-table .oa-icon {
+				position: absolute;
+				right: 0;
+				bottom: 0;
+			}
+			
+			.mui-table .oa-icon-star-filled {
+				color: #f14e41;
+			}
+		</style>
 	</head>
 
 	<body>
@@ -16,70 +42,11 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">邀请他回答</h1>
 		</header>
-		<!--<div class="mui-scroll">
-				<ul id="list-container" class="mui-table-view">
-				</ul>
-		</div>-->
-		<div id="refreshContainer" class="mui-content mui-fullscreen" style="z-index:0">
+		<div id="refreshContainer" class="mui-content">
 			<div class="mui-scroll-wrapper">
 				<div class="mui-scroll">
-					<ul id="list-container" class="mui-table-view">
-						<li class="mui-table-view-cell">
-							<img src="../../image/cloud/cloud_0_tuku.png">
-							<div>
-								<p><span>李云</span>邀请<span>刘老师</span>回答问题</p>
-								<p>[教育]史上严重的毁书事件层造成哪些名著失传？</p>
-							</div>
-						</li>
-						<li class="mui-table-view-cell">
-							<img src="../../image/cloud/cloud_0_tuku.png">
-							<div>
-								<p><span>李云</span>邀请<span>刘老师</span>回答问题</p>
-								<p>[教育]史上严重的毁书事件层造成哪些名著失传？</p>
-							</div>
-						</li>
-						<li class="mui-table-view-cell">
-							<img src="../../image/cloud/cloud_0_tuku.png">
-							<div>
-								<p><span>李云</span>邀请<span>刘老师</span>回答问题</p>
-								<p>[教育]史上严重的毁书事件层造成哪些名著失传？</p>
-							</div>
-						</li>
-						<li class="mui-table-view-cell">
-							<img src="../../image/cloud/cloud_0_tuku.png">
-							<div>
-								<p><span>李云</span>邀请<span>刘老师</span>回答问题</p>
-								<p>[教育]史上严重的毁书事件层造成哪些名著失传？</p>
-							</div>
-						</li>
-						<li class="mui-table-view-cell">
-							<img src="../../image/cloud/cloud_0_tuku.png">
-							<div>
-								<p><span>李云</span>邀请<span>刘老师</span>回答问题</p>
-								<p>[教育]史上严重的毁书事件层造成哪些名著失传？</p>
-							</div>
-						</li>
-						<li class="mui-table-view-cell">
-							<img src="../../image/cloud/cloud_0_tuku.png">
-							<div>
-								<p><span>李云</span>邀请<span>刘老师</span>回答问题</p>
-								<p>[教育]史上严重的毁书事件层造成哪些名著失传？</p>
-							</div>
-						</li>
-						<li class="mui-table-view-cell">
-							<img src="../../image/cloud/cloud_0_tuku.png">
-							<div>
-								<p><span>李云</span>邀请<span>刘老师</span>回答问题</p>
-								<p>[教育]史上严重的毁书事件层造成哪些名著失传？</p>
-							</div>
-						</li>
-						<li class="mui-table-view-cell">
-							<img src="../../image/cloud/cloud_0_tuku.png">
-							<div>
-								<p><span>李云</span>邀请<span>刘老师</span>回答问题</p>
-								<p>[教育]史上严重的毁书事件层造成哪些名著失传？</p>
-							</div>
-						</li>
+					<ul id="list-container" class="mui-table-view mui-table-view-striped mui-table-view-condensed">
+
 					</ul>
 				</div>
 			</div>
@@ -92,39 +59,96 @@
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/publicQiuzhiProtocol.js" type="text/javascript" charset="utf-8"></script>
-		<script type="text/javascript">
-			var expertData; //专家详细页传来的 专家信息
-			var pageIndex = 1; //请求数据页面
-			var totalPageCount = 10; //总页码10 测试用
-
-			mui.init();
-
-			mui.plusReady(function() {
-						console.log(111111)
-						//25.获取某个用户的提问列表
-						getAsksByUser(33);
-				})
-					//25.获取某个用户的提问列表
-					function getAsksByUser(userId) { //需要加密的数据
-						var comData = {
-							userId: userId, //用户ID
-							pageIndex: '1', //当前页数
-							pageSize: 0 //每页记录数,传入0，获取总记录数
-						};
-						// 等待的对话框
-						var wd = events.showWaiting();
-						//25.获取某个用户的提问列表
-						postDataQZPro_getAsksByUser(comData, wd, function(data) {
-							wd.close();
-							console.log('25.获取某个用户的提问列表:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-							if(data.RspCode == 0) {
-
-							} else {
-								mui.toast(data.RspTxt);
-							}
-						});
-					};
-		</script>
 	</body>
+
+</html>
+
+<script type="text/javascript">
+	var ExpertsInfo; //专家详细页传来的 专家信息
+	var pageIndex = 1; //请求数据页面
+	var totalPageCount; //总页码
+	var flagRef = 0; //是刷新0，还是加载更多1
+	var datasource = []; //回答总数组
+
+	mui.init();
+	mui.plusReady(function() {
+		//25.获取某个用户的提问列表
+		getAsksByUser(1);
+		mui(".mui-scroll-wrapper .mui-scroll").pullToRefresh({
+			down: {
+				callback: function() {
+					//清除节点
+
+					document.getElementById('list-container').innerHTML = "";
+					var self = this;
+					console.log("下拉刷新");
+					pageIndex = 1;
+					flagRef = 0;
+					getAsksByUser(1);
+					self.endPullDownToRefresh();
+				}
+			},
+			up: {
+				callback: function() {
+
+					var self = this;
+					console.log("上拉加载更多");
+					flagRef = 1;
+					if(pageIndex < totalPageCount) {
+						getAsksByUser(1);
+					} else {
+						mui.toast('没有更多了');
+					}
+					self.endPullUpToRefresh();
+				}
+			}
+		});
+
+	});
+
+	//25.获取某个用户的提问列表
+	function getAsksByUser(userId) { //需要加密的数据
+		var comData = {
+			userId: userId, //用户ID
+			pageIndex: '1', //当前页数
+			pageSize: '10' //每页记录数,传入0，获取总记录数
+		};
+		// 等待的对话框
+		var wd = events.showWaiting();
+		//25.获取某个用户的提问列表
+		postDataQZPro_getAsksByUser(comData, wd, function(data) {
+			wd.close();
+			console.log('25.获取某个用户的提问列表:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+			if(data.RspCode == 0) {
+				//总页数
+				totalPageCount = data.RspData.TotalPage;
+				if(flagRef == 0) { //刷新
+					datasource = data.RspData.Data;
+				} else { //加载更多
+					pageIndex++;
+					//合并数组
+					datasource = datasource.concat(data.RspData.Data);
+				}
+				addData();
+			} else {
+				mui.toast(data.RspTxt);
+			}
+		});
+	};
+
+	function addData() {
+		for(var i = 0; i < datasource.length; i++) {
+			var list = document.getElementById("list-container");
+			var li = document.createElement("li");
+			li.className = 'mui-table-view-cell';
+			li.innerHTML = '<div class="mui-table"><div class="mui-table-cell mui-col-xs-12">' +
+				'<h4 class="mui-ellipsis">' + datasource[i].AskTitle +
+				'</h4><p class="mui-h6 mui-ellipsis">' + datasource[i].AnswerNum + '回答 ' + datasource[i].AskTime +' ' +datasource[i].FocusNum + '关注</p></div></div>'
+			list.appendChild(li);
+		}
+
+	}
+</script>
+</body>
 
 </html>
