--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
@@ -505,10 +505,12 @@
 		};
 
 		//27.获取某个用户的关注人列表
-		function getFocusUsersByUser(userId) {
+		function getFocusUsersByUser(focusId) {
+			var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //当前登录账号utid
 			//需要加密的数据
 			var comData = {
-				userId: userId, //用户ID
+				userId: personalUTID, //用户ID
+				focusId:focusId,//关注用户ID,查看用户
 				pageIndex: '1', //当前页数
 				pageSize: 0 //每页记录数,传入0，获取总记录数
 			};
