专家评论页数据

--- a/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
@@ -120,7 +120,8 @@
 		var ExpertsInfo;
 		mui.plusReady(function() {
 			events.preload('AttentionPersons.html',10);
-			events.preload('qiuzhi-expertAllAnswer.html',10)
+			events.preload('qiuzhi-expertAllAnswer.html',10);
+			events.preload('qiuzhi-expertAllComment.html',10);
 			var main = plus.webview.currentWebview(); //获取当前窗体对象
 			ExpertsInfo = main.data; //接收页面传入参数值，传过来的专家model
 			console.log('expert-detail.html:' + JSON.stringify(ExpertsInfo));
@@ -137,7 +138,7 @@
 				} else if(this.id == 'AskLi') { //他的提问
 					events.openNewWindowWithData('expert-ask.html', ExpertsInfo);
 				} else if(this.id == 'CommentLi') { //他的评论
-
+					events.fireToPageWithData('qiuzhi-expertAllComment.html','qiuzhi-expertAllComment',ExpertsInfo);
 				} else { //邀请他的回答
 					events.openNewWindowWithData('qiuzhi-inviteAnswer.html', ExpertsInfo);
 				}
@@ -251,13 +252,13 @@
 			nodes.AskNum.innerHTML = ExpertsInfo.AskNum + '<span class="mui-icon mui-icon-forward"></span>';
 			nodes.UserNote.innerText = ExpertsInfo.UserNote;
 			nodes.FocusManNum.innerText = ExpertsInfo.FocusManNum;
-			nodes.ExpertChannels.innerText = ExpertsInfo.ExpertChannelNames;
+			nodes.ExpertChannels.innerText = ExpertsInfo.ExpertChannels;
 			nodes.IsLikeNum.innerText = ExpertsInfo.IsLikeNum;
 			nodes.FocusAskNum.innerText = ExpertsInfo.FocusAskNum;
 			nodes.CommentNum.innerHTML = ExpertsInfo.CommentNum + '<span class="mui-icon mui-icon-forward"></span>';
 			nodes.IsFocusedManNum.innerText = ExpertsInfo.IsFocusedManNum;
 			nodes.AnswerNum.innerHTML = ExpertsInfo.AnswerNum + '<span class="mui-icon mui-icon-forward"></span>';
-			nodes.inviteNum.innerHTML = ExpertsInfo.InviteNum + '<span class="mui-icon mui-icon-forward"></span>';
+//			nodes.inviteNum.innerHTML = ExpertsInfo.inviteNum + '<span class="mui-icon mui-icon-forward"></span>';
 		}
 	</script>
 
