--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllComment.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllComment.html
@@ -48,8 +48,10 @@
 					//赋值
 					ExpertsInfo = event.detail.data;
 					console.log('专家回答页传值：'+JSON.stringify(ExpertsInfo));
-					//24.获取某个用户的回答列表
-					getAnswersByUser(ExpertsInfo.UserId);
+					//清除节点
+					document.getElementById('list-container').innerHTML = "";
+					//33.获取某个用户的评论列表
+					getCommentsByUser(ExpertsInfo.UserId);
 				});
 
 				//上拉下拉注册
@@ -57,26 +59,24 @@
 					down: {
 						callback: function() {
 							//清除节点
-
 							document.getElementById('list-container').innerHTML = "";
 							var self = this;
 							console.log("下拉刷新");
 							pageIndex = 1;
 							flagRef = 0;
-							//24.获取某个用户的回答列表
-							getAnswersByUser(ExpertsInfo.UserId);
+							//33.获取某个用户的评论列表
+							getCommentsByUser(ExpertsInfo.UserId);
 							self.endPullDownToRefresh();
 						}
 					},
 					up: {
 						callback: function() {
-
 							var self = this;
 							console.log("上拉加载更多");
 							flagRef = 1;
 							if(pageIndex < totalPageCount) {
-								//24.获取某个用户的回答列表
-								getAnswersByUser(ExpertsInfo.UserId);
+								//33.获取某个用户的评论列表
+								getCommentsByUser(ExpertsInfo.UserId);
 							}else{
 								mui.toast('没有更多了');
 							}
@@ -87,8 +87,8 @@
 
 			});
 
-			//24.获取某个用户的回答列表
-			function getAnswersByUser(userId) {
+			//33.获取某个用户的评论列表
+			function getCommentsByUser(userId) {
 				//需要加密的数据
 				var comData = {
 					userId: userId, //用户ID
@@ -97,10 +97,10 @@
 				};
 				// 等待的对话框
 				var wd = events.showWaiting();
-				//24.获取某个用户的回答列表
-				postDataQZPro_getAnswersByUser(comData, wd, function(data) {
+				//33.获取某个用户的评论列表
+				postDataQZPro_getCommentsByUser(comData, wd, function(data) {
 					wd.close();
-					console.log('24.获取某个用户的回答列表:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+					console.log('33.获取某个用户的评论列表:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 					if(data.RspCode == 0) {
 						//总页数
 						totalPageCount = data.RspData.TotalPage;
