--- a/JiaoBaoYun-hb/html/utils/refreshTest.html
+++ b/JiaoBaoYun-hb/html/utils/refreshTest.html
@@ -48,6 +48,8 @@
 					//赋值
 					ExpertsInfo = event.detail.data;
 					console.log('专家回答页传值：'+JSON.stringify(ExpertsInfo));
+					//清除节点
+					document.getElementById('list-container').innerHTML = "";
 					//24.获取某个用户的回答列表
 					getAnswersByUser(ExpertsInfo.UserId);
 				});
